--- a/static/css/user.css
+++ b/static/css/user.css
@@ -40,13 +40,20 @@ input {
     margin: 32px 0;
 }
 
-.separator::before,
-.separator::after {
+.separator::before {
     content: "";
     flex: 1;
     height: 1px;
     background-color: #a8a8b3;
     margin-right: 16px;
+}
+
+.separator::after {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background-color: #a8a8b3;
+    margin-left: 16px;
 }
 
 .btn {
