--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/global.css">
+{% extends 'layout.html' %}
+{% block head %}
     <link rel="stylesheet" href="/static/css/user.css">
 
-    <script src="https://kit.fontawesome.com/5b1c173e42.js" crossorigin="anonymous"></script>
+{% endblock %}
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    <title>Cadastro - Novo Usuário</title>
-</head>
-
-<body>
-    <form action="">
+{% block title %}
+    Cadastro - Novo Usuário
+{% endblock %}
+    
+{% block content %}
+    <form method="POST">
         <h1>Formulário de Cadastro</h1>
         <div>
-            <label for="">Primeiro Nome:</label>
+            <label>Primeiro Nome:</label>
             <input id="firstName" name="firstName" type="text" required>
         </div>
         <div>
-            <label for="">Ultimo Nome:</label>
+            <label>Ultimo Nome:</label>
             <input id="lastName" name="lastName" type="text" required>
         </div>
         <div class="separator">Envie o seu formulario</div>
@@ -33,14 +25,5 @@
             <button class="btn btn-clear" type="reset">Limpar</button>
             <a href="{{url_for('pages.index')}}" class="btn btn-back"><i class="fas fa-undo"></i></a>
         </div>
-
     </form>
-</body>
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
-    </script>
-<script src="/static/js/script.js"></script>
-
-
-</html>
+{% endblock %}
