--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -13,11 +13,11 @@ Cadastro - Alterando Usuário
     <h1>Formulário de Alteração</h1>
     <div>
         <label>Primeiro Nome:</label>
-        <input id="firstName" value="{{user['nome']}}" name="firstName" type="text" required>
+        <input id="firstName" value="{{users['nome']}}" name="firstName" type="text" required>
     </div>
     <div>
         <label>Ultimo Nome:</label>
-        <input id="lastName" value="{{user['sobrenome']}}" name="lastName" type="text" required>
+        <input id="lastName" value="{{users['sobrenome']}}" name="lastName" type="text" required>
     </div>
     <div class="separator">Envie o seu formulario</div>
     <div class="display">
