--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,8 +12,8 @@
     height: 50px;
 }
 
-.style-information{
-    font: 16px 'Roboto';
+.style-information {
+    font: 16px "Roboto";
     font-weight: 500;
 }
 
@@ -42,6 +42,28 @@ a {
     padding: 20px;
     color: #fff;
     font-size: large;
+    margin: 10px;
+}
+
+a.new-user-link {
+    float: left;
+    padding: 3rem 0 0 15rem;
+}
+
+.btn {
+    height: 50px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0 32px;
+    width: 100px;
+
+    cursor: pointer;
+    border: 0;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    background-color: #000;
 }
 
 i:hover {
