--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,11 @@
+body {
+    background-color: #59c6c9;
+}
+
 .container {
     width: 1120px;
     font-size: 16px;
     padding: 4rem;
-    margin-top: 20px;
     border-radius: 10px;
     text-align: center;
 }
@@ -25,7 +28,7 @@
     height: 50px;
 
     padding: 0 10px;
-    background-color: #59c6c9;
+    background-color: #a9d5d6;
     color: #000;
     border-radius: 5px;
 }
@@ -64,6 +67,8 @@ a.new-user-link {
     display: flex;
     align-items: center;
     background-color: #000;
+    margin-left: 5rem;
+    margin-top: 1rem;
 }
 
 i:hover {
